# MapPy

./: .gitignore  LICENSE  README.md  check.py  const_bvp.py  data.csv  data2.csv  duffing.py  forced_alpazur.py  henon.py  izhikevich.py  logistic_3d.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy_docs.yaml  main.yml
MapPy/: __init__.py  _fundamentals.py
MapPy/tools/: __init__.py
docs/: Makefile  index.html  requirements.txt
docs/source/: conf.py  get_version.py  index.rst
docs/source/_static/: switcher.json
docs/source/_templates/: version.html
docs/source/api/: MapPy.ContinuousMode.rst  MapPy.DiscreteMode.rst  MapPy.HesDimErr.rst  MapPy.JacDimErr.rst  MapPy.Mode.rst  MapPy.ModeStepResult.rst  MapPy.PoincareMap.rst  MapPy.SolveIvbmpResult.rst  MapPy.SomeHesUndefined.rst  MapPy.SomeJacUndefined.rst  MapPy.solve_ivbmp.rst  MapPy.tools.DictVector.rst  hds.ContinuousMode.rst  hds.DiscreteMode.rst  hds.HesDimErr.rst  hds.JacDimErr.rst  hds.Mode.rst  hds.ModeStepResult.rst  (+6 more)
hds/: __classes__.py  __init__.py  __main__.py  _fundamentals.py
hds/tools/: __init__.py
mappy/: __init__.py  _version.py
mappy/continuation/: __init__.py  _continuation.py
mappy/fundamentals/: __init__.py  _core.py  _fundamentals.py
mappy/plot/: _plot2d.py
mappy/root/: __init__.py  _cycle.py  _local_bf.py
mappy/tools/: __init__.py  _continuation.py  _plot.py  _plot2d.py  _type.py
mappy/trajectory/: __init__.py  _plot2d.py  _traj.py
mappy/typing/: _type.py
mappyNew/tools/: _dict_vector.py
note/: composite.py  contraction.py  note.tex
(+14 files in other folders)
