[build-system]
requires = [
    "setuptools>=61.0",
    "numpy",
    "scipy",
    "simpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "MapPy"
version = "0.0.2"
authors = [
    { name="Yuu Miino" },
]
description = "Analysis tools for dynamical systems"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Yuu-Miino/MapPy"
