[metadata]
name = mappy
version = attr: mappy._version.__version__
author = Yuu Miino
description = Analysis tools for dynamical systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Yuu-Miino/MapPy
python_requires = >=3.10, <4
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mappy
install_requires =
    numpy
    scipy
    simpy
    matplotlib
